scrollbar fix

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -30,6 +30,10 @@
 
 @table-border-color: #000;
 
+html {
+  overflow-y: scroll;
+}
+
 th {
     -moz-user-select: none;
     -webkit-user-select: none;
